--- a/RevSpaceWebApp/src/app/components/view-profile-component/view-profile-component.component.html
+++ b/RevSpaceWebApp/src/app/components/view-profile-component/view-profile-component.component.html
@@ -1,4 +1,3 @@
-
 <div style="margin: 2% 10%;border-left: #474C55 solid 3px;border-right: #474C55 solid 3px;">
        <div style="background-color: #FCB414;margin: 1% 5% 1% 5%;border-radius: 10px;color: #474C55;">
               <h1 style="padding: 3% 3% 3% 2%;"><span>{{user.firstName}}</span> <br> <span>{{user.lastName}}</span></h1>
@@ -6,32 +5,33 @@
        <hr style="border-top: 1px dashed black;margin: 0% 5%;">
        <div style="margin: 1% 5%;color:white;">
               <div class="row align-items-start">
-                     <div class="col" >
+                     <div class="col">
                             <div style="background-color: #F26925; padding: 3%;border-radius: 10px;">
                                    <h3>Revature Information</h3>
-                            Title:
-                            <span>{{user.title}}</span>
-                            <br>
-                            Revature Join Date: <span *ngIf="user.revatureJoinDate"> {{user.revatureJoinDate | newDate}}</span>
-                            <br>
-                            Birthday: <span *ngIf="user.birthday"> {{user.birthday | newDate}}</span>
-                            <br>
-                            Location:
-                            <span>{{user.location}}</span>
+                                   Title:
+                                   <span>{{user.title}}</span>
+                                   <br>
+                                   Revature Join Date: <span *ngIf="user.revatureJoinDate"> {{user.revatureJoinDate |
+                                          newDate}}</span>
+                                   <br>
+                                   Birthday: <span *ngIf="user.birthday"> {{user.birthday | newDate}}</span>
+                                   <br>
+                                   Location:
+                                   <span>{{user.location}}</span>
                             </div>
 
                      </div>
                      <div class="col" style="height: 100%;">
                             <div style="background-color: #F26925;padding: 3%;border-radius: 10px;">
                                    <h3>Contact</h3>
-                            Email:
-                            <span>{{user.email}}</span>
-                            <br>
-                            GitHub username:
-                            <span> {{user.githubUsername}}</span>
-                            <br>
-                            <br>
-                            <br>
+                                   Email:
+                                   <span>{{user.email}}</span>
+                                   <br>
+                                   GitHub username:
+                                   <span> {{user.githubUsername}}</span>
+                                   <br>
+                                   <br>
+                                   <br>
                             </div>
                      </div>
               </div>
