--- a/RevSpaceWebApp/src/app/app.component.html
+++ b/RevSpaceWebApp/src/app/app.component.html
@@ -56,11 +56,11 @@
     </div>
 
   </div>
-</nav>
-<app-login *ngIf="!isLoggedIn()"></app-login>
-<router-outlet *ngIf="isLoggedIn()"></router-outlet>
+      <!-- </nav> -->
+      <app-login *ngIf="!isLoggedIn()"></app-login>
+      <router-outlet *ngIf="isLoggedIn()"></router-outlet>
 
-<app-top style="position: sticky; left: 90%; top: 90%;"></app-top>
-<!-- <button (click)="toggleDarkTheme()">Toggle dark theme</button> -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-</body>
+      <app-top style="position: sticky; left: 90%; top: 90%;"></app-top>
+      <!-- <button (click)="toggleDarkTheme()">Toggle dark theme</button> -->
+      <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+
