--- a/src/app/components/join-group/join-group.component.html
+++ b/src/app/components/join-group/join-group.component.html
@@ -2,7 +2,12 @@
 <html>
 <body>
     <div class="container-fluid">
+        <div *ngIf="showGroup">
+            <app-view-group-thread (eventEmitter)="closeGroup()"></app-view-group-thread>
+           
+        </div>
         <h1>{{errMsg}}</h1>
+        <h1 *ngIf="groups == undefined"> No Available Groups To Join :/ </h1>
         <form class="viewGroupsForm" >
             <table class="table" *ngFor="let group of groups; let i = index;">
                 <tr class="d-flex justify-content-center">
@@ -31,12 +36,9 @@
                     </div>
                     </div>
                     <div class="form-control">
-                        <div class="d-flex justify-content-center pt-1">
+                        <div class="d-flex justify-content-center">
                             <div class="col-2">
-                                <input type="submit" class="btn btn-dark" (click)="openGroup(i)" value="View Group">
-                            </div>
-                            <div class="col-2" *ngIf="group.owner.userId == loginService.getLoginInfo().user.userId" >
-                                <input type="submit" class="btn btn-danger" (click)="openGroup(i)" value="Manage Group">
+                                <input type="submit" class="btn btn-dark" (click)="openGroup(i)" value="View Group Info">
                             </div>
                         </div>
                     </div>
